wip methods almost finished

--- a/reports/mt-thesis/references.bib
+++ b/reports/mt-thesis/references.bib
@@ -1,4 +1,4 @@
-@article{snakemake,
+@article{snakemake, 
    abstract = {Snakemake is a workflow engine that provides a readable Python-based workflow definition language and a powerful execution environment that scales from single-core workstations to compute clusters without modifying the workflow. It is the first system to support the use of automatically inferred multiple named wildcards (or variables) in input and output filenames. © The Author 2012. Published by Oxford University Press. All rights reserved.},
    author = {Johannes Köster and Sven Rahmann},
    doi = {10.1093/bioinformatics/bts480},
@@ -17,6 +17,8 @@
 
 @web_page{covidre,
    title = {COVID-19 Re},
+   author = {COVID-19-Re},
+   year = {2020},
    url = {https://ibz-shiny.ethz.ch/covid-19-re-international/},
 }
 
@@ -49,10 +51,14 @@
 }
 @web_page{bdmmp,
    title = {GitHub - tgvaughan/BDMM-Prime: Modified implementation of the BDMM multi-type birth-death model for BEAST 2.},
+   author = {BDMM-Prime},
+   year = {2020},
    url = {https://github.com/tgvaughan/BDMM-Prime},
 }
 @web_page{nextstrain,
    title = {GitHub - nextstrain/ncov: Nextstrain build for novel coronavirus SARS-CoV-2},
+   author = {Nextstrain-ncov},
+   year = {2020},
    url = {https://github.com/nextstrain/ncov},
 }
 @generic{Shu2017,
@@ -435,4 +441,21 @@ Syst Biol. 2019 May 1;68(3):505-519. doi: 10.1093/sysbio/syy078.},
    volume = {56},
    url = {https://pubmed.ncbi.nlm.nih.gov/17849325/},
    year = {2007},
+}
+
+
+@article{VaughanWIP,
+   abstract = {},
+   author = {Timothy G. Vaughan},
+   doi = {},
+   issn = {},
+   issue = {},
+   journal = {},
+   month = {},
+   pages = {},
+   publisher = {},
+   title = {BDMM-Prime Work in progress},
+   volume = {},
+   url = {},
+   year = {2021},
 }
