--- a/reports/mt-thesis/thesis.tex
+++ b/reports/mt-thesis/thesis.tex
@@ -84,7 +84,7 @@ ETH Zürich}
 
 
 % This displays the bibliography for all cited external documents. All references have to be defined in the file references.bib and can then be cited from within this document.
-\bibliographystyle{IEEEtran}
+\bibliographystyle{apalike}
 \bibliography{references}
 
 % This creates an appendix chapter, comment if not needed.
