--- a/reports/mt-thesis/introduction.tex
+++ b/reports/mt-thesis/introduction.tex
@@ -10,4 +10,18 @@ the first reported cases were in China in early December \cite{},
 
 
 In a phylodynamic analysis, we aim to integrate genetic and epidemiological information to understand pathogen evolution and transmission dynamics. We can learn about the epidemic spread and the interactions between hosts from the imprint that these events leave in virus phylogenies. This is possible for RNA viruses, and in specific for SARS-CoV-2, because virus genetic evolution and epidemic processes are in the same time scale \cite{Grenfell2013} \cite{Volz2014}.  More precisely, the field of phylodynamics studies how phylogenetic trees are being generated and infers the population parameters behind that process. 
-\todo{Better in the Introduction?}
+
+
+\todo[inline]{TODO introduction}
+
+\begin{itemize}
+\item Importance of understanding the spread of the virus to prevent future outbreaks 
+
+\item About phylodynamics/phylogeographics? Use of genetic sequences as a source of information combined with other sources of information as travel data
+
+\item About what we know of the introduction of sars-cov-2 in Europe and early dynamics till 8 March
+
+\item About what we know of the case counts in Europe? Can sequences help?
+
+\item Introduce/formulate the questions: case counts, first introductions, ?migration vs within region transmission?, migration patterns, ?border closures.
+\end{itemize}
