--- a/reports/mt-thesis/methods.tex
+++ b/reports/mt-thesis/methods.tex
@@ -1,9 +1,9 @@
 \chapter{Material and Methods}
 
 \textbf{SARS-CoV 2 genome data set.} 
-We create a dataset of 360 genetic sequences from December 2019 to March 8 2020, obtained from publicly available data on GISAID \cite{Shu2017} (accessed on November 2020). We follow the Nextstrain workflow for the curation of the dataset \cite{nextstrain}. Sequences with incomplete collection date, less than 27.000 bases in length or with more than 3.000 unknown bases are omitted. Also, sequences from known clusters of transmission or from the same patient are excluded. The resulting worldwide sequence dataset is aligned with MAFFT. The begining and the end of the alignment are masked respectively by 100 and 50 sequences as well as sites  13402, 24389 and 24390, identified by Nextstrain as prone to sequencing errors.
+We assemble a dataset of 360 genetic sequences from December 2019 to March 8 2020, obtained from publicly available data on GISAID \cite{Shu2017} (accessed on November 2020). We follow the Nextstrain workflow for the curation of the dataset \cite{nextstrain}. Sequences with incomplete collection date, less than 27.000 bases in length or with more than 3.000 unknown bases are omitted. Also, sequences from known clusters of transmission or from the same patient are excluded. The resulting worldwide sequence dataset is aligned with MAFFT. The begining and the end of the alignment are masked respectively by 100 and 50 sequences as well as sites  13402, 24389 and 24390, identified by Nextstrain as prone to sequencing errors.
 
-To focus on the early dynamics in Europe we select sequences from China, origin of the epidemic; France and Germany, the European countries with the earliest cases; and Italy and Spain, the European countries with the biggest outbreaks in March. To take into account the dynamics in other regions of Europe we include a group of 50 sequences from other European countries. We limit our sample of Chinese genomes to sequences until January 23, the starting date of the lockdown in Hubei. 
+To focus on the early dynamics in Europe we select sequences from China, the origin of the epidemic; France and Germany, the European countries with the earliest cases; and Italy and Spain, the European countries with the biggest outbreaks in March. To take into account the dynamics in other regions of Europe we include a group of 50 sequences from other European countries. We limit our sample of Chinese genomes to sequences collected before January 23, the starting date of the lockdown in Hubei. 
 
 Due to the large (and unprecendented) number of available genetic sequences for SARS-CoV-2, we need to subsample the alignment. Each sequence is subsampled with a probability equal to the probability of having a reported case in that country the day of sample collection, inversely weighted by the probability of having a sequence in GISAID that day in the country. With this subsampling protocol, we aim to get a constant sampling proportion across the full period for each country. 
 
@@ -49,7 +49,7 @@ P(\mathcal{T}_c, \mathcal{E}, \theta, \eta) &= P(\mathcal{T}_c|\mathcal{T}, \eta
 \end{align}
 
 
-Where $\mathcal{T}$ is the rooted time tree without ancestral locations. Thus, we can express Equation \ref{eq:posterior1} in terms of the conditional distributions:
+where $\mathcal{T}$ is the rooted time tree without ancestral locations. Thus, we can express Equation \ref{eq:posterior1} in terms of the conditional distributions:
 
 \begin{align}
 P(\mathcal{T}_c, \mathcal{E}, \theta, \eta | A) &= P(\mathcal{T}_c|\mathcal{T}, \eta) P(\mathcal{E}|\mathcal{T}_c, \eta) \frac{P(A | \mathcal{T}, \theta) P(\mathcal{T} | \eta) P(\theta) P(\eta)}{P(A)}\\
@@ -62,7 +62,7 @@ $P(\mathcal{T}_c|\mathcal{T}, \eta)$, $P(\mathcal{E}|\mathcal{T}_c, \eta)$ and $
 We use a Markov chain Monte Carlo (MCMC) Metropolis-Hastings algorihtm to approximate this posterior. Since the MCMC only uses ratios of posterior probabilities, we avoid calculating the marginal likelihood $P(A)$. This algorithm is implemented in BDMM-Prime package \cite{bdmmp} for BEAST 2.6.3 \cite{Bouckaert2019}. BDMM-Prime first samples from $P(\mathcal{T}, \theta, \eta | A)$, then in a second step these samples are augmented by sampling from $P(\mathcal{T}_c|\mathcal{T}, \eta)$ and $P(\mathcal{E}|\mathcal{T}_c, \eta) $ and adding these variables to obtain the overall posterior $P(\mathcal{T}_c, \mathcal{E}, \theta, \eta | A)$. In this way, $P(\mathcal{T}_c|\mathcal{T}, \eta)$ and $P(\mathcal{E}|\mathcal{T}_c, \eta) $  are only calculated for a subset of samples instead of every MCMC step.
 
 
-While it is also possible to include $\mathcal{T}_c$ and $\mathcal{E}$ directly into the Bayes' rule as implemented in EpiInf package \cite{Vaughan2019}, the factorization of the posterior in these three terms allow us to use the standard birth-death-sampling tree prior implementations in BDMM to compute $P(\mathcal{T}, \theta, \eta | A)$ \cite{Kuhnert2016} \cite{Scire2020}. This will speedup the analysis with almost no overhead compared to the standard BDMM inference and can be used in pre-existing multitype analyses withoud additional MCMC.\\
+While it is also possible to include $\mathcal{T}_c$ and $\mathcal{E}$ directly into the Bayes' rule as implemented in EpiInf package \cite{Vaughan2019}, the factorization of the posterior in these three terms allow us to use the standard birth-death-sampling tree prior implementations in BDMM to compute $P(\mathcal{T}, \theta, \eta | A)$ \cite{Kuhnert2016} \cite{Scire2020}. This will speed up the analysis with almost no overhead compared to the standard BDMM inference and can be used in pre-existing multitype analyses withoud additional MCMC.\\
 
 \textbf{Stochastic mapping of ancestral locations and epidemic trajectories}
 To sample from $P(\mathcal{T}_c|\mathcal{T}, \eta)$, BDMM-Prime implements a stochastic mapping algorithm based on the work by \cite{Hohna2019}. A set of differential equations is numerically integrated over $\mathcal{T}$ to obtain the marginal probability of a location value at any point along each branch. From this probabilities, we can derive time-dependent rates that define the changes of the location along the tree according to a continuous-time Markov process. Then, we can simulate forward in time from the root of the tree the location trajectories down the tree edges. For a detailed derivation of the stochastic mapping of the algorithm refer to \cite{VaughanWIP}.\\
@@ -81,7 +81,7 @@ P(\mathcal{E}^{(a)}|\mathcal{T}_c, \eta) = w_a^* P^*(\mathcal{E}^{(a)}| \eta) \p
 \label{eq:traj}
 \end{equation}
 
-The epidemic trajectories are simulated with an adaptive tau-leaping algorithm \cite{Gillespie2000} in BDMM-Prime. This method is based on the Gillespie algorithm \cite{Gillespie1977} but the simulation time is divided in small intervals and the number of events is drawn from a poisson distribution for each interval. This algorithm is more efficient that Gillespie when we have a high number of individuals since we have to update the rates less often. 
+The epidemic trajectories are simulated with an adaptive tau-leaping algorithm \cite{Gillespie2000} in BDMM-Prime. This method is based on the Gillespie algorithm \cite{Gillespie1977} but the simulation time is divided in small intervals and the number of events is drawn from a Poisson distribution for each interval. This algorithm is more efficient than Gillespie when we have a high number of individuals since we have to update the rates less often. 
 
 We simulate a fixed number of trajectories, called particles, for each set of population parameters $\eta$ and structured tree $\mathcal{T}_c$. The trajectories are simulated until some point and are weigthed as described in Equation \ref{eq:traj}. We resample using importance sampling to get rid of low-weighted trajectories and then resume the simulation of all the particles from the sampled trajectory ending point. This process is repeated until the end of the simulation. Then, we sample one single trajectory from the set of final trajectories with important sampling and record each event and its timing to future analysis \cite{VaughanWIP}. All these steps are implemented by BDMM-Prime trajectory logger and we use it in our analysis.\\
 
@@ -108,7 +108,7 @@ The air travel data is obtained from EUROSTATS transport datasets \textit{avia\_
 \end{figure}
 
 \textbf{Model specifications and priors.} 
-Since we focus on the early epidemic outbreak, we expect un unimpeded spread of the virus that can be described by the exponential growth of the infected population and no significant decrease in the number of susceptibles over time \cite{Boskova2014}. Thus, we assume a constant basic reproductive number $R_0$ for each of the European countries before the lockdown in the Lombardy region in March 8. However, in China the first wave of the epidedmic had almost concluded in March so we can not make the same assumption. We fixed the reproductive number in China and include three different periods, changing on January 23 and February 10 based on \cite{Pan2020} \cite{Wu2020} \cite{Xiao2020}. Before January 23, we use the estimation in \cite{Park2020} \cite{Billah2020} to fix the basic reproductive number $R_0$ in China to $2.9$ . From January 23 to February 10 and from February 11 to March 8, we calculate the average effective reproductive number based on the estimations in \cite{covidre} \cite{Huisman2020} and obtain the $R_e$ in China to be $1.1$ and $0.43$ respectively.   
+Since we focus on the early epidemic outbreak, we expect unimpeded spread of the virus that can be described by the exponential growth of the infected population and no significant decrease in the number of susceptibles over time \cite{Boskova2014}. Thus, we assume a constant basic reproductive number $R_0$ for each of the European countries before the lockdown in the Lombardy region in March 8. However, in China the first wave of the epidedmic had almost concluded in March so we can not make the same assumption. We fixed the reproductive number in China and include three different periods, changing on January 23 and February 10 based on \cite{Pan2020} \cite{Wu2020} \cite{Xiao2020}. Before January 23, we use the estimation in \cite{Park2020} \cite{Billah2020} to fix the basic reproductive number $R_0$ in China to $2.9$ . From January 23 to February 10 and from February 11 to March 8, we calculate the average effective reproductive number based on the estimations in \cite{covidre} \cite{Huisman2020} and obtain the $R_e$ in China to be $1.1$ and $0.43$ respectively.   
 
 In Table \ref{table:priors} we show the values and prior distributions used in the Bayesian inference of the multitype birth death model and substitution parameters. Several of these model specifications are identical to those from \cite{Nadeau2020}.
 
@@ -163,5 +163,5 @@ The SARS-CoV-2 genetic data can be downloaded from www.gisaid.org \cite{Shu2017}
 
 \textbf{Code availability and analyses reproducibility.}
 All the code is available at ...
-To ensure the reproducibility of the analysis, we have implemented the whole workflow with Snakemake \cite{snakemake}. The workflow is a modified version of Nextrain workflow \cite{nextstrain} with the additional rules for BEAST 2 analysis and results processing. 
+To ensure the reproducibility of the analysis, we have implemented the whole workflow with Snakemake \cite{snakemake}. The workflow is a modified version of Nextrain workflow \cite{nextstrain} with the additional rules for BEAST 2 analysis and results processing. \todo{add snakemake graph}
 
