--- a/reports/mt-thesis/thesis.tex
+++ b/reports/mt-thesis/thesis.tex
@@ -45,7 +45,10 @@ ETH Zürich}
 
 \begin{abstract}
     The abstract should be short, stating what you did and what the most important result is.
-	Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+	\todo[inline]{TODO abstract}
+	This project focus on the spatial dynamics of the early spread of SARS-CoV-2 in Europe. We apply a novel approach based on the Multi-type Birth Death phylodynamic model to infer structured population dynamics jointly with between-subpopulation transmission rates from viral genome sequences. The inferred epidemic trajectories for the combined outbreak responsible for the observed sequence data will allow us to better understand the entry into and early spread of SARS-CoV-2 in Europe.
+
+	% The early dynamics of the epidemic in Europe surprised the whole world/ From isolated cases detexcted in some, ina  few weeks we faced an unprecedent epidemic with case numbers and death counts stressing well stalished health infraestructures. Understanding what happened during those first month could prepare us to be less surpred in similar future events. Complex dynamics, typical epi date, case identification and travel history, very likely not all cases reported. Genetic sequences are a valuable source of information than together with popualtion dynamic model could inform us about the firrst steps of the coronavirus in Europe. We have integrated sequence data, flisht data and bayesian inference priors? to infer population trajectories - case counts and migration dynamics between the most relevant countrries at the start of the European pandemic.
 \end{abstract}
 
 \tableofcontents
@@ -55,6 +58,12 @@ ETH Zürich}
 \include{introduction}
 
 \include{methods}
+
+\include{results}
+
+\include{discussion}
+
+\include{conclusion}
 
 
 % \begin{theorem}[First Theorem] \label{thm:first theorem}
@@ -79,8 +88,6 @@ ETH Zürich}
 % An example of an included graphic can be found in Figure~%\ref{fig:example_figure}.
 % Note that in \LaTeX, ``quotes'' do not use the usual double quote characters.
 
-
-\chapter{Discussion}
 
 
 % This displays the bibliography for all cited external documents. All references have to be defined in the file references.bib and can then be cited from within this document.
