--- a/reports/mt-thesis/discussion.tex
+++ b/reports/mt-thesis/discussion.tex
@@ -9,6 +9,10 @@
 
 \item First introduction other studies. 
 
+Once the first european imported cases, everything happen quickly. If we look at the evolution of thte epidedmic in China, longer ttime between first case andd exportedd cases. Greater connectivity among Europe spread faster the epidemic.
+
+Origin of Spain very close to official reporting date, while now the officiall case counts in Spain have been updadted to included cases detected early on by the surveillance system. This coulld be highly dependant on our samples and the dates of the sequences.
+
 \item Migration patterns other studies.
 
 \item Discuss assumptions of the model, caveats and possible improvements.
