--- a/reports/mt-thesis/results.tex
+++ b/reports/mt-thesis/results.tex
@@ -1,55 +1,21 @@
-\graphicspath{{../../results/}}
-
 \chapter{Results}
 
-% \todo{Modify tables in R to have one value per cell, nr rate and times}
-
-\todo[inline]{The figures are from analysis Europe3: subsampled datasets according to cases/day and constant migration rate (no GLM), same xml specifications than Sarah's analysis.}
-
-\subsubsection*{Burden of SARS-CoV-2 infections in Europe}
-
-The inferred epidemic trajectories contain the information about the total number of cases until 8th of March. For the European countries, we obtain an inferred number of total cases above the number of confirmed cases to ECDC, consistent with known limited test availability of the first wave and  previous studies results \cite{Li2020} \cite{Wu2020}. These cases counts correspond to \todo{Include values} x-y times higher than the number of reported cases. Italy is the country with the highest infered number of cases x, followed by Spain, France and Germany. The infered number of cases for China is below the reported number of cases. \todo{limitations of the model, sequence information, partial outbreak dynamics}\\
-
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=0.8\textwidth]{201030_europe3_figtraj01.png}
-    \caption{Inferred population size summary statistics for each deme over time. The line represents the median population trajectory and the interval is the 95\%  credible interval in log scale from a random subsampled set of inferred epidemic trajectories.}
-    \label{fig:gribbon}
-    \todo[inline]{Specify that the random subset are 500 trajectories in all figure legends}
-\end{figure}
-
+\textbf{Origin of the first wave in Europe} 
+While the first cases in Europe were reported in mid-January, it is likely that the first European wave started earrlier and due to the lack of knowledge confusson  of the disease it was not detected by the surveillance systems.  We assume the origin case to be an imported case from China into Europe. We analyze the time and destination of the first imported case into any of the European countries of our infered epidemic trajectories and estimate the origin of the European epidemic on January 2020 ($95\%$ CCI). Location Italy or France. Figure \ref{fig:firstEUcase}. It is possible that several imported cases from China started the local transmission in the different Euorpean countries that a single imported case. So we cna look into the first imported cases in Europe and from its probability distribution the first scenario looks more likely, with most of these first introduction witht origin in China and like when looking at just one case they were more to Italy and France, but alos Germany. Earlly introductions in Spain have a very low probabilty, looking like Spain was not a key player in the orrigin of SARS-CoV-2 in Europe.
 
 \begin{figure}[p]
     \centering
-    \includegraphics[width=0.9\textwidth]{201030_europe3_figtraj02.png}
-    \caption{Inferred epidemic trajectories over time. A random subsampled set of 500 trajectories is plotted. In each subplot, the trajectories (solid lines) are compared with the ECDC cumulative case count data (dashed line) in log scale.}
-    \label{fig:trajs}
-\end{figure}
-
-
-In Figure \ref{fig:gribbon} and/or \ref{fig:trajs} we compare the total number of inferred cases by day to the total cumulative number of cases that have been reported to ECDC that same day. Our inferred case counts follow a exponential growth earlier in time than the reported curve and with higher number of cases, being the difference bigger for later times in the epidemic.\\
-
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=0.9\textwidth]{201030_europe3_figtraj03.png}
-    \caption{5-days reporting rate, calculated as the cumulative number of ECDC reported cases by the median number of cumulative inferred cases in intervals of 5 days until 8th of March. }
-    \label{fig:reported}
-\end{figure}
-
-We can think of a reporting rate as the number of reported cases relative to the total number of cases inferred by the model. This reporting rate decreases with time for all European countries, except for Italy that increases again around March, Figure \ref{fig:reported}. 
-
-
-\subsubsection*{First introductions into European countries}
-
-\begin{figure}[p]
-    \centering
-    \includegraphics[width=\textwidth]{201030_europe3_figtraj04.png}
+    \includegraphics[width=\textwidth]{210205_europe10_figtraj0405.png}
     \caption{First introductions of SARS-CoV-2. From the set of random subsampled trajectories, the first introduction time for each epidemic trajectory is recorded and the probability distribution over all these times is plotted. \textbf{A} Probability density of the time of first introduction for each deme. Each dotted line represents the first date when cases where reported to ECDC by deme color. In the case of China, the distribution of the origin time is plotted, since in the analysis we defined Chine as the origin of the epidemic with probability 1. For the other five demes, the distribution of the time of first migration into the deme is shown. \textbf{B} Stacked probability density of the destination of first introduction into Europe coloured by the destination deme. This first case corresponds to the first migration event from China to any of the European countries. \textbf{C} Stacked probability density of the source of the first introduction for each deme coloured by the source deme of the introduction.}
-    \label{fig:first}
+    \label{fig:firstEUcase}
     \todo[inline]{ticks for every month}
 \end{figure}
+
+
+\textbf{First cases in European countries}
+
+
+Since in our model we consider the different European countries, we can also estimate from the infered epidemic trajectories the origin of the epidedmic in each particular country. In Figure we have the origin time for each country compared to the ddate of the first reporrted case to ECDC by that country. In average, we predict a delay in detection of x days for the Eurropean countries, out of the $95\% CCI$ for France, Germany and Italy. Origin in Spain close to the official detection day. We estimate that the epidemic in any of the European countries was seeded by an imported case from China as seen in Figurem with some small prrobability for Germany and Italy of having orriginatetdd from a case from each other, and mostly half of the rpobability in the case of Spain from the epidemdic started with a case imported from one of the others Euroopean countries. Same than before, we can look into the first 10 imported cases into each country and now we see that the transmission between european countries adquire much moer importance,  so once SARS-CoV-2 entered Europe, the transmission between european countrries were soon more important than the cases coming from China. This coulld relate also to the decrease in tthe trravel to and from China seen in figure.
 
 We would like to answer the question of when and where the first case in Europe occured. We can look to the model inferred epidemic trajectories and analyze the time distribution of the first case in Europe and in each deme. China is defined as the origin of the epidemic in the analysis and this is reflected in Figure \ref{fig:first} A. The occurrence of the origin of the epidemic, i.e. first case in China, is almost one month before the epidemic starts in any European country, ranging \todo{Include values}  x-y. The inferred date of the first case in Europe is inferred to be between a 95\% interval x-y. Among the European countries, France and Germany have the earlier time of introduction, followed by Italy, Other European deme and Spain. We can compare this inferred dates of introduction with the day each country reported its first case to ECDC. In all cases, the reported day was later than the median of the inferred distribution, but it is inside the 95\% interval.\\
 
@@ -64,7 +30,7 @@ We can analyze if this order of countries, defined by the time in which the firs
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=\textwidth]{201030_europe3_figtraj05.png}
+    \includegraphics[width=\textwidth]{210205_europe10_figtraj06.png}
     \caption{Countries ordered by the time of its first introduction, i.e. first case in the country. Each row is the order for one of the subsampled epidemic trajectories and each column represents the position relative to the other countries first introduction, e.g. in first position for all epidemic trajectories is China since it is the origin of the epidemic.} 
     \label{fig:first_imig}
 \end{figure}
@@ -73,17 +39,92 @@ Along the same lines, we could ask if this order of countries is mantained when 
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=\textwidth]{201030_europe3_figtraj06.png}
+    \includegraphics[width=\textwidth]{210205_europe10_figtraj07.png}
     \caption{Order of countries by the time of its first migration out of the country, i.e. first exported case to other country. Each row is the order for one of the subsampled epidemic trajectories and each column represents the position relative to the other countries first migration, e.g. in first position for all epidemic trajectories is China since it was the first country with exported cases of SARS-CoV-2 to other regions.}
     \label{fig:first_omig}
     \todo[inline]{I don't like much these "order" plots but maybe they could be useful to detect interesting patterns?}
 \end{figure}
 
-\subsubsection*{Migration vs within-region transmission}
+\textbf{Detection timing and response}
+
+
+\begin{figure}[p]
+    \centering
+    \includegraphics[width=\textwidth]{210205_europe10_figtraj03.png}
+    \caption{First introductions of SARS-CoV-2. From the set of random subsampled trajectories, the first introduction time for each epidemic trajectory is recorded and the probability distribution over all these times is plotted. \textbf{A} Probability density of the time of first introduction for each deme. Each dotted line represents the first date when cases where reported to ECDC by deme color. In the case of China, the distribution of the origin time is plotted, since in the analysis we defined Chine as the origin of the epidemic with probability 1. For the other five demes, the distribution of the time of first migration into the deme is shown. \textbf{B} Stacked probability density of the destination of first introduction into Europe coloured by the destination deme. This first case corresponds to the first migration event from China to any of the European countries. \textbf{C} Stacked probability density of the source of the first introduction for each deme coloured by the source deme of the introduction.}
+    \label{fig:first}
+    \todo[inline]{ticks for every month}
+\end{figure}
+
+
+The time between the first case in the country, i.e. first incoming migration event and the first case from within-region transmission is of x  (y-z) with similar values for all demes?. The time from the first incoming migration to the first outgoing migration is longer with a median of x (y-z). (This could be interesting to say if we should focus or not the screening and testing capacities to detect incoming migrations or if when we have evidence of cases in the population we shoud follow a more general strategy to find cases in the population according to the model. Is it different for each country?)\\
+
+(How well did the countries detecting the first cases, there were already within region transmision?) We compare the date of the first reported rate of each country with the date in which within-region transmission for that country started according to the model. We see some differences among countries, France and Germany had in all inferred epidemic trajectories ongoing within-region transmission when first cases werre reported, while x\% of epidemic trajectories did not have had a within region transmission case when the first case in Spain was reported.\\
+
+
+\begin{figure}[p]
+    \centering
+    \includegraphics[width=\textwidth]{210205_europe10_figtraj13.png}
+    \caption{First introductions of SARS-CoV-2. From the set of random subsampled trajectories, the first introduction time for each epidemic trajectory is recorded and the probability distribution over all these times is plotted. \textbf{A} Probability density of the time of first introduction for each deme. Each dotted line represents the first date when cases where reported to ECDC by deme color. In the case of China, the distribution of the origin time is plotted, since in the analysis we defined Chine as the origin of the epidemic with probability 1. For the other five demes, the distribution of the time of first migration into the deme is shown. \textbf{B} Stacked probability density of the destination of first introduction into Europe coloured by the destination deme. This first case corresponds to the first migration event from China to any of the European countries. \textbf{C} Stacked probability density of the source of the first introduction for each deme coloured by the source deme of the introduction.}
+    \label{fig:first}
+    \todo[inline]{ticks for every month}
+\end{figure}
+
+
+We can also compare the date of the first reported case with the date of the first outgoing migration from the country. (This could be interesting to say if a extreme measure closing borders with the first case could be effective to impede transmission to other countries: percentage of trajectories whre transmission to Europe would have been avoided. For other countries we can look at how many migrations events could have been avoided (and how many not) if the country closed borders after first reported case according to the model. Not realistic measure, extreme case.)\\ 
+
+
+\textbf{Burden of SARS-CoV-2 infections in Europe}
+The inferred epidemic trajectories contain the information about the total number of cases until 8th of March. For the European countries, we obtain an inferred number of total cases above the number of confirmed cases to ECDC, consistent with known limited test availability of the first wave and  previous studies results \cite{Li2020} \cite{Wu2020}. These cases counts correspond to \todo{Include values} x-y times higher than the number of reported cases. Italy is the country with the highest infered number of cases x, followed by Spain, France and Germany. The infered number of cases for China is below the reported number of cases. \todo{limitations of the model, sequence information, partial outbreak dynamics}\\
+
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=\textwidth]{201030_europe3_figtraj07.png}
+    \includegraphics[width=0.8\textwidth]{210205_europe10_figtraj01.png}
+    \caption{Inferred population size summary statistics for each deme over time. The line represents the median population trajectory and the interval is the 95\%  credible interval in log scale from a random subsampled set of inferred epidemic trajectories.}
+    \label{fig:gribbon}
+    \todo[inline]{Specify that the random subset are 500 trajectories in all figure legends}
+\end{figure}
+
+
+\begin{figure}[p]
+    \centering
+    \includegraphics[width=0.9\textwidth]{210205_europe10_figtraj02.png}
+    \caption{Inferred epidemic trajectories over time. A random subsampled set of 500 trajectories is plotted. In each subplot, the trajectories (solid lines) are compared with the ECDC cumulative case count data (dashed line) in log scale.}
+    \label{fig:trajs}
+\end{figure}
+
+
+In Figure \ref{fig:gribbon} and/or \ref{fig:trajs} we compare the total number of inferred cases by day to the total cumulative number of cases that have been reported to ECDC that same day. Our inferred case counts follow a exponential growth earlier in time than the reported curve and with higher number of cases, being the difference bigger for later times in the epidemic.\\
+
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.9\textwidth]{210205_europe10_figtraj11.png}
+    \caption{5-days reporting rate, calculated as the cumulative number of ECDC reported cases by the median number of cumulative inferred cases in intervals of 5 days until 8th of March. }
+    \label{fig:reported}
+\end{figure}
+
+
+\begin{figure}[p]
+    \centering
+    \includegraphics[width=\textwidth]{210205_europe10_figtraj12.png}
+    \caption{First introductions of SARS-CoV-2. From the set of random subsampled trajectories, the first introduction time for each epidemic trajectory is recorded and the probability distribution over all these times is plotted. \textbf{A} Probability density of the time of first introduction for each deme. Each dotted line represents the first date when cases where reported to ECDC by deme color. In the case of China, the distribution of the origin time is plotted, since in the analysis we defined Chine as the origin of the epidemic with probability 1. For the other five demes, the distribution of the time of first migration into the deme is shown. \textbf{B} Stacked probability density of the destination of first introduction into Europe coloured by the destination deme. This first case corresponds to the first migration event from China to any of the European countries. \textbf{C} Stacked probability density of the source of the first introduction for each deme coloured by the source deme of the introduction.}
+    \label{fig:first}
+    \todo[inline]{ticks for every month}
+\end{figure}
+
+
+We can think of a reporting rate as the number of reported cases relative to the total number of cases inferred by the model. This reporting rate decreases with time for all European countries, except for Italy that increases again around March, Figure \ref{fig:reported}. 
+
+
+
+
+\textbf{Imported cases vs local transmission}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=\textwidth]{210205_europe10_figtraj08.png}
     \caption{Median and 95\% credible interval for the cumulative number of events (within-region transmissions and migrations to the country (incoming) and from the country (outgoing) over time.}
     \label{fig:events}
     \todo[inline]{change legend outgoing migration}
@@ -96,15 +137,9 @@ From the epidemic trajectories, we can extract the information about how many ca
 
 \todo{get the proportion of within-region transmission and incoming migrations?}
 
-The time between the first case in the country, i.e. first incoming migration event and the first case from within-region transmission is of x  (y-z) with similar values for all demes?. The time from the first incoming migration to the first outgoing migration is longer with a median of x (y-z). (This could be interesting to say if we should focus or not the screening and testing capacities to detect incoming migrations or if when we have evidence of cases in the population we shoud follow a more general strategy to find cases in the population according to the model. Is it different for each country?)\\
-
-(How well did the countries detecting the first cases, there were already within region transmision?) We compare the date of the first reported rate of each country with the date in which within-region transmission for that country started according to the model. We see some differences among countries, France and Germany had in all inferred epidemic trajectories ongoing within-region transmission when first cases werre reported, while x\% of epidemic trajectories did not have had a within region transmission case when the first case in Spain was reported.\\
-
-We can also compare the date of the first reported case with the date of the first outgoing migration from the country. (This could be interesting to say if a extreme measure closing borders with the first case could be effective to impede transmission to other countries: percentage of trajectories whre transmission to Europe would have been avoided. For other countries we can look at how many migrations events could have been avoided (and how many not) if the country closed borders after first reported case according to the model. Not realistic measure, extreme case.)\\ 
 
 
-
-\subsubsection*{Migrations patterns}
+\textbf{Interational transmission patterns}
 Figures \ref{fig:migs_srcdest} and \ref{fig:migs}.\\
 \todo[inline]{TODO}
 
@@ -117,26 +152,29 @@ Hubei-China is the majority source of migrations for all countries till February
   \centering
 
   \begin{minipage}[t]{0.4\textwidth}
-  \includegraphics[width=\textwidth]{201030_europe3_figtraj09a.png}
+  \includegraphics[width=\textwidth]{210205_europe10_figtraj09a.png}
   \label{fig:migs1}
   \end{minipage}
   \begin{minipage}[t]{0.4\textwidth}
-  \includegraphics[width=\textwidth]{201030_europe3_figtraj09b.png}
+  \includegraphics[width=\textwidth]{210205_europe10_figtraj09b.png}
   \label{fig:migs2}
   \end{minipage}
   \begin{minipage}[t]{0.4\textwidth}
-  \includegraphics[width=\textwidth]{201030_europe3_figtraj09c.png}
+  \includegraphics[width=\textwidth]{210205_europe10_figtraj09c.png}
   \label{fig:migs3}
   \end{minipage}
   \caption{Migration flux among demes over the three periods defined in the analysis.}
   \label{fig:migs}
 \end{figure}
 
-\begin{figure}[]
+
+
+\begin{figure}[p]
     \centering
-    \includegraphics[width=\textwidth]{201030_europe3_figtraj08.png}
-    \caption{}
-    \label{fig:migs_srcdest}
+    \includegraphics[width=\textwidth]{210205_europe10_figtraj10.png}
+    \caption{First introductions of SARS-CoV-2. From the set of random subsampled trajectories, the first introduction time for each epidemic trajectory is recorded and the probability distribution over all these times is plotted. \textbf{A} Probability density of the time of first introduction for each deme. Each dotted line represents the first date when cases where reported to ECDC by deme color. In the case of China, the distribution of the origin time is plotted, since in the analysis we defined Chine as the origin of the epidemic with probability 1. For the other five demes, the distribution of the time of first migration into the deme is shown. \textbf{B} Stacked probability density of the destination of first introduction into Europe coloured by the destination deme. This first case corresponds to the first migration event from China to any of the European countries. \textbf{C} Stacked probability density of the source of the first introduction for each deme coloured by the source deme of the introduction.}
+    \label{fig:first}
+    \todo[inline]{ticks for every month}
 \end{figure}
 
 
