--- a/reports/mt-thesis/results.tex
+++ b/reports/mt-thesis/results.tex
@@ -1,7 +1,9 @@
 \chapter{Results}
 
-\textbf{Origin of the first wave in Europe} 
-While the first cases in Europe were reported in mid-January, it is likely that the first European wave started earrlier and due to the lack of knowledge confusson  of the disease it was not detected by the surveillance systems.  We assume the origin case to be an imported case from China into Europe. We analyze the time and destination of the first imported case into any of the European countries of our infered epidemic trajectories and estimate the origin of the European epidemic on January 2020 ($95\%$ CCI). Location Italy or France. Figure \ref{fig:firstEUcase}. It is possible that several imported cases from China started the local transmission in the different Euorpean countries that a single imported case. So we cna look into the first imported cases in Europe and from its probability distribution the first scenario looks more likely, with most of these first introduction witht origin in China and like when looking at just one case they were more to Italy and France, but alos Germany. Earlly introductions in Spain have a very low probabilty, looking like Spain was not a key player in the orrigin of SARS-CoV-2 in Europe.
+\textbf{The origin of SARS-CoV-2 in Europe} 
+While the first cases in Europe were reported end of January, the first European wave is suspected to have started earlier but been undetected, mistaken for other common repiratory diseases in winter. In our model, we assume the origin of SARS-CoV-2 in Europe to be an imported case from China into any of the European countries. We analyze the time and destination of the first imported case in the infered epidemic trajectories and estimate the origin of the European epidemic on January 2020 ($95\%$ CCI). As shown in Figure \ref{fig:firstEUcase} A, we place the destination country of this first imported case in Italy or France, with x of probability each.  
+
+Likewise, we analyze the first ten imported cases into Europe and obtain the probability distribution of the source and destination country, Figure \ref{fig:firstEUcase} B and C.  The role of Italy as the receptor of these firts cases is highlighted even more looking at several cases. Earlly introductions in Spain have a very low probabilty, looking like Spain was not a key player in the orrigin of SARS-CoV-2 in Europe. China is the main source of these first introductions, supporting the hypothesis of the European epidemic seeded by several and not just one imported cases from China.
 
 \begin{figure}[p]
     \centering
@@ -12,15 +14,12 @@ While the first cases in Europe were reported in mid-January, it is likely that 
 \end{figure}
 
 
-\textbf{First cases in European countries}
+\textbf{The early spread of SARS-CoV-2 among the European countries}
 
 
 Since in our model we consider the different European countries, we can also estimate from the infered epidemic trajectories the origin of the epidedmic in each particular country. In Figure we have the origin time for each country compared to the ddate of the first reporrted case to ECDC by that country. In average, we predict a delay in detection of x days for the Eurropean countries, out of the $95\% CCI$ for France, Germany and Italy. Origin in Spain close to the official detection day. We estimate that the epidemic in any of the European countries was seeded by an imported case from China as seen in Figurem with some small prrobability for Germany and Italy of having orriginatetdd from a case from each other, and mostly half of the rpobability in the case of Spain from the epidemdic started with a case imported from one of the others Euroopean countries. Same than before, we can look into the first 10 imported cases into each country and now we see that the transmission between european countries adquire much moer importance,  so once SARS-CoV-2 entered Europe, the transmission between european countrries were soon more important than the cases coming from China. This coulld relate also to the decrease in tthe trravel to and from China seen in figure.
 
-We would like to answer the question of when and where the first case in Europe occured. We can look to the model inferred epidemic trajectories and analyze the time distribution of the first case in Europe and in each deme. China is defined as the origin of the epidemic in the analysis and this is reflected in Figure \ref{fig:first} A. The occurrence of the origin of the epidemic, i.e. first case in China, is almost one month before the epidemic starts in any European country, ranging \todo{Include values}  x-y. The inferred date of the first case in Europe is inferred to be between a 95\% interval x-y. Among the European countries, France and Germany have the earlier time of introduction, followed by Italy, Other European deme and Spain. We can compare this inferred dates of introduction with the day each country reported its first case to ECDC. In all cases, the reported day was later than the median of the inferred distribution, but it is inside the 95\% interval.\\
-
-The first case in Europe for each trajectoy corresponds to a migration from China to any European country. We can analyze the destination of this first migration into Europe as is shown in Figure \ref{fig:first} B. According to our model, the probability that this first European case was in Spain is very low. The destination of the first case amonth the rest of European demes is equally probable and there is no clear difference in the time distribution for each destination country, with a maximum probability around x.\\
-\todo{explain this better, compute the probability of the first case in Europe destination}
+Among the European countries, France and Germany have the earlier time of introduction, followed by Italy, Other European deme and Spain. We can compare this inferred dates of introduction with the day each country reported its first case to ECDC. In all cases, the reported day was later than the median of the inferred distribution, but it is inside the 95\% interval.\\
 
 The first case in each European country could have been imported from China or from other European country with an ongoing epidemic that started earlier. However, in our analysis we obtain a much higher support for China being the most probable source of the first case for all European demes, Figure \ref{fig:first} C.\\
 
@@ -45,7 +44,7 @@ Along the same lines, we could ask if this order of countries is mantained when 
     \todo[inline]{I don't like much these "order" plots but maybe they could be useful to detect interesting patterns?}
 \end{figure}
 
-\textbf{Detection timing and response}
+\textbf{Detection timing and response to the European epidemics}
 
 
 \begin{figure}[p]
@@ -139,7 +138,7 @@ From the epidemic trajectories, we can extract the information about how many ca
 
 
 
-\textbf{Interational transmission patterns}
+\textbf{International transmission patterns}
 Figures \ref{fig:migs_srcdest} and \ref{fig:migs}.\\
 \todo[inline]{TODO}
 
