--- a/reports/mt-thesis/results.tex
+++ b/reports/mt-thesis/results.tex
@@ -1,9 +1,9 @@
 \chapter{Results}
 
 \textbf{The origin of SARS-CoV-2 in Europe} 
-While the first cases in Europe were reported end of January, the first European wave is suspected to have started earlier but been undetected, mistaken for other common repiratory diseases in winter. In our model, we assume the origin of SARS-CoV-2 in Europe to be an imported case from China into any of the European countries. We analyze the time and destination of the first imported case in the infered epidemic trajectories and estimate the origin of the European epidemic on January 2020 ($95\%$ CCI). As shown in Figure \ref{fig:firstEUcase} A, we place the destination country of this first imported case in Italy or France, with x of probability each.  
+While the first cases in Europe were reported end of January, the first European wave is suspected to have started earlier but been undetected, mistaken for other common repiratory diseases in winter. In our model, we assume the origin of SARS-CoV-2 in Europe to be an imported case from China into any of the European countries. We analyze the time and destination of the first imported case in the infered epidemic trajectories and estimate the origin of the European epidemic on January 2020 ($95\%$ CCI)  \todo{with final results}. As shown in Figure \ref{fig:firstEUcase} A, we place the destination country of this first imported case in Italy or France, with x of probability each.  
 
-Likewise, we analyze the first ten imported cases into Europe and obtain the probability distribution of the source and destination country, Figure \ref{fig:firstEUcase} B and C.  The role of Italy as the receptor of these firts cases is highlighted even more looking at several cases. Earlly introductions in Spain have a very low probabilty, looking like Spain was not a key player in the orrigin of SARS-CoV-2 in Europe. China is the main source of these first introductions, supporting the hypothesis of the European epidemic seeded by several and not just one imported cases from China.
+Likewise, we analyze the first ten imported cases into Europe and obtain the probability distribution of the source and destination country, Figure \ref{fig:firstEUcase} B and C.  The role of Italy as the receptor of these first cases is highlighted even more looking at several cases. Early introductions in Spain have a very low probabilty, looking like Spain was not a key player in the origin of SARS-CoV-2 in Europe. China is the main source of these first introductions, supporting the hypothesis of the European epidemic seeded by several and not just one imported cases from China. \todo{with final results}
 
 \begin{figure}[p]
     \centering
